--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Pengaduan Layanan</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h2>Form Pengaduan Layanan BPS Kabupaten Brebes</h2>
