--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Form Pengaduan Layanan BPS Kabupaten Brebes</h2>
-    <p> </p>
+    <p>Anda dapat mengisi Form Layanan Pengaduan berikut ini</p>
 
     <form id="pengaduanForm">
         <label for="nama">Nama:</label><br>
