--- a/index.html
+++ b/index.html
@@ -33,5 +33,23 @@
     </form>
 
     <script src="script.js"></script>
+    <form id="pengaduanForm">
+    <label for="nama">Nama:</label>
+    <input type="text" id="nama" name="nama">
+    <br><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+    <br><br>
+
+    <label for="nomor_hp">Nomor HP:</label>
+    <input type="text" id="nomor_hp" name="nomor_hp">
+    <br><br>
+
+    <button type="submit">Submit</button>
+</form>
+
+<p id="error-message" style="color: red;"></p>
+
 </body>
 </html>
