--- a/index.html
+++ b/index.html
@@ -1,38 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Pengaduan Layanan</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link ke file CSS -->
+    <title>Form Pengaduan Layanan BPS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Judul yang ingin Anda pindahkan ke atas -->
-    <h2>Form Pengaduan Layanan BPS Kabupaten Brebes</h2>
-    
-    <!-- Form Pengaduan -->
-    <form id="pengaduanForm">
-        <label for="nama">Nama:</label>
-        <input type="text" id="nama" name="nama"><br><br>
+    <div class="container">
+        <header>
+            <h1>Form Pengaduan Layanan <span>BPS Kabupaten Brebes</span></h1>
+            <p>Anda tidak perlu khawatir, kami akan melindungi data diri Anda sesuai peraturan yang berlaku</p>
+        </header>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
+        <main>
+            <form id="pengaduanForm">
+                <div class="form-group">
+                    <label for="nama">Nama</label>
+                    <input type="text" id="nama" name="nama" placeholder="Nama" required>
+                </div>
 
-        <label for="nomor_hp">Nomor HP:</label>
-        <input type="text" id="nomor_hp" name="nomor_hp"><br><br>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                </div>
 
-        <label for="jenis_pengaduan">Jenis Pengaduan:</label>
-        <select id="jenis_pengaduan" name="jenis_pengaduan">
-            <option>Layanan PST</option>
-            <option>Layanan Lain</option>
-        </select><br><br>
+                <div class="form-group">
+                    <label for="nomor_hp">Nomor HP</label>
+                    <input type="text" id="nomor_hp" name="nomor_hp" placeholder="Nomor HP" required>
+                </div>
 
-        <label for="isi_pengaduan">Isi Pengaduan:</label>
-        <textarea id="isi_pengaduan" name="isi_pengaduan"></textarea><br><br>
+                <div class="form-group">
+                    <label for="jenis_pengaduan">Jenis Pengaduan</label>
+                    <select id="jenis_pengaduan" name="jenis_pengaduan" required>
+                        <option value="Layanan PST">Layanan PST</option>
+                        <option value="Layanan Lain">Layanan Lain</option>
+                    </select>
+                </div>
 
-        <button type="submit">Submit</button>
-    </form>
+                <div class="form-group">
+                    <label for="isi_pengaduan">Isi Pengaduan</label>
+                    <textarea id="isi_pengaduan" name="isi_pengaduan" placeholder="Isi Pengaduan" required></textarea>
+                </div>
 
-    <script src="script.js"></script> <!-- Link ke file JavaScript -->
+                <button type="submit">SUBMIT</button>
+            </form>
+        </main>
+
+        <footer>
+            <p>BPS Kabupaten Brebes © 2024</p>
+        </footer>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
