--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             <p>BPS Kabupaten Brebes © 2024</p>
         </footer>
     </div>
+    <form id="pengaduanForm" action="https://script.google.com/macros/s/AKfycbylnCqwA4cUnFSBE5j04sMrwFEXYfAZ3oTUTSqL4H29jaXESI18At4QNWPTlzikqp4I/exec" method="POST">
+
 
     <script src="script.js"></script>
 </body>
