--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="form-group">
                     <label for="nomor_hp">Nomor HP</label>
-                    <input type="text" id="nomor_hp" name="nomor_hp" placeholder="Nomor HP" required>
+                    <input type="text" id="nomorhp" name="nomorhp" placeholder="Nomor HP" required>
                 </div>
 
                 <div class="form-group">
